// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreListStar component should match exact snapshot 1`] = `
<span
  aria-label="4.0"
  className="namePhone"
  title="1.12"
>
  <span
    aria-label="star"
    className="star"
    role="img"
    style={Object {}}
  >
    ⭐
  </span>
  <span
    aria-label="star"
    className="star"
    role="img"
    style={Object {}}
  >
    ⭐
  </span>
  <span
    aria-label="star"
    className="star"
    role="img"
    style={Object {}}
  >
    ⭐
  </span>
  <span
    aria-label="star"
    className="star"
    role="img"
    style={Object {}}
  >
    ⭐
  </span>
</span>
`;

exports[`ScoreListStar component should match exact snapshot level 3 1`] = `
<span
  aria-label="4.5"
  className="namePhone"
  title="1.33"
>
  <span
    aria-label="star"
    className="star"
    role="img"
    style={Object {}}
  >
    ⭐
  </span>
  <span
    aria-label="star"
    className="star"
    role="img"
    style={Object {}}
  >
    ⭐
  </span>
  <span
    aria-label="star"
    className="star"
    role="img"
    style={Object {}}
  >
    ⭐
  </span>
  <span
    aria-label="star"
    className="star"
    role="img"
    style={Object {}}
  >
    ⭐
  </span>
  <span
    aria-label="star"
    className="star"
    role="img"
    style={
      Object {
        "clipPath": "inset(0 60% 0 0)",
      }
    }
  >
    ⭐
  </span>
</span>
`;
